<resources>
    <string name="app_name">AHamove</string>
    <string name="test_repo_name">material-design</string>
    <string name="test_repo_visibility">Public</string>
    <string name="test_repo_description">Material Design icons by Google (Material Symbols)</string>
    <string name="test_repo_language">Java</string>
    <string name="test_repo_stars">50.1k</string>
    <string name="test_repo_forks">9.6k</string>
    <string name="test_user_blog_url">https://opensource.google/</string>
    <string name="test_user_location">United State of America</string>
    <string name="test_user_followers">41.4k followers</string>
    <string name="test_user_description">Google ❤️Open Source</string>
    <string name="test_user_name">Google</string>
    <string name="follower_title">follower</string>
    <string name="followers_title">followers</string>
    <string name="title_popular_repositories">Popular Repositories</string>
    <string name="no_internet_warning_title">Không có kết nối internet!</string>
    <string name="internet_connected_title">Kết nối internet đã sẵn sàng</string>
    <string name="reload_title">Reload\n</string>
    <string name="btn_scroll_to_top_content_description">Scroll to top</string>
    <string name="no_more_repos_available_title">No more repos available</string>
    <string name="item_selected_toast">%s, stars: %d</string>
</resources>