<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/common_padding"
    android:background="@drawable/background_box_out_line"
    android:foreground="?selectableItemBackground"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/common_padding"
    android:paddingVertical="@dimen/common_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/color_text_high_light"
            android:textSize="?textSizeNormal"
            tools:text="@string/test_repo_name" />

        <TextView
            android:id="@+id/is_private_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_visibility_tags_rounded"
            android:fontFamily="@font/roboto_medium"
            android:paddingHorizontal="@dimen/common_padding_small"
            android:textSize="?textSizeSmall"
            tools:text="@string/test_repo_visibility" />
    </LinearLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/roboto"
        android:paddingTop="@dimen/small_padding"
        android:textSize="?textSizeBody"
        tools:text="@string/test_repo_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_small"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/small_padding"
            android:paddingEnd="@dimen/common_padding_small"
            android:textSize="?textSizeBody"
            app:drawableStartCompat="@drawable/background_circle_language_tags"
            app:drawableTint="@color/repo_color_language_java"
            tools:text="@string/test_repo_language" />

        <TextView
            android:id="@+id/stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/small_padding"
            android:paddingEnd="@dimen/common_padding_small"
            android:textSize="?textSizeBody"
            app:drawableStartCompat="@drawable/round_star_24"
            tools:text="@string/test_repo_stars" />

        <TextView
            android:id="@+id/forks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/small_padding"
            android:textSize="?textSizeBody"
            app:drawableStartCompat="@drawable/rounded_fork_right_24"
            tools:text="@string/test_repo_forks" />

    </LinearLayout>


</LinearLayout>