<?xml version="1.0" encoding="utf-8"?>


<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:collapsedTitleGravity="start|center_vertical"
                app:collapsedTitleTextAppearance="@style/TextAppearance.Heading"
                app:contentScrim="?colorSurface"
                app:expandedTitleGravity="bottom|center_vertical"
                app:expandedTitleTextColor="#00ffffff"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:titleCollapseMode="scale">

                <RelativeLayout
                    android:id="@+id/user_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/common_padding"
                    android:paddingVertical="@dimen/common_padding"
                    app:layout_collapseMode="parallax">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/user_logo"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/logo_google"
                        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
                        app:strokeColor="@color/color_separator"
                        app:strokeWidth="1dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@id/user_logo"
                        android:orientation="vertical"
                        android:paddingStart="@dimen/common_padding">

                        <TextView
                            android:id="@+id/user_name"
                            style="@style/TextAppearance.Heading"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/test_user_name" />

                        <TextView
                            android:id="@+id/user_description"
                            style="@style/TextAppearance.Body"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/common_padding_small"
                            tools:text="@string/test_user_description" />

                        <TextView
                            android:id="@+id/follower"
                            style="@style/TextAppearance.Body"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:drawablePadding="4dp"
                            app:drawableStartCompat="@drawable/round_people_24"
                            tools:text="@string/test_user_followers" />

                        <TextView
                            android:id="@+id/user_location"
                            style="@style/TextAppearance.Link"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:drawablePadding="4dp"
                            app:drawableStartCompat="@drawable/rounded_location_on_24"
                            tools:text="@string/test_user_location" />

                        <TextView
                            android:id="@+id/user_link"
                            style="@style/TextAppearance.Link"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:drawablePadding="@dimen/small_padding"
                            android:text="@string/test_user_blog_url"
                            app:drawableStartCompat="@drawable/rounded_link_24" />
                    </LinearLayout>

                </RelativeLayout>

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_collapseMode="pin"
                    app:title="Google"
                    app:titleTextAppearance="@style/TextAppearance.Heading" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/common_padding"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="?fontTitle"
                android:paddingVertical="@dimen/common_padding"
                android:text="@string/title_popular_repositories"
                android:textColor="?textColorBody"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_github_repo" />

        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>